--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,54 @@
-*{
-    margin: 0;
-    padding: 0;
+body{
+    font-family: 'Roboto', sans-serif;
+    background-color:#FFFFFF ;
+    color:#333333;
+    font-size:14px ;
 }
-body {
-    background:  #EFEFEF;
+.wrapper{
+    max-width:1110px;
+    padding-left: 15px;
+    padding-right:15px ;
+    margin: 0 auto
+
 }
-.subnav{
-    height: 50px;
-    width: 100%;
-    background: #E5E5E5;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.nav{
+    display:flex;
+    justify-content:center;
+    list-style-type:none;
+    padding-left:0;
 }
-.subnav > li {
-    margin-right: 10px;
-    list-style-type: none;
+.nav>li{
+margin-left:10px;
+margin-right:10px;
 }
-.subnav > li > a {
+.nav>li>a {
     text-decoration: none;
-    color: #000000;
+    color: #333333;
+}
+.header{
+
+    background-color: #FFF;
+}
+.header-top{
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+    padding: 10px 0;
+}
+.logo{
+    color: #F13C6E;
+    font-size: 36px;
+    font-weight: 700;
+}
+.header-info span{
+    font-size: 16px;
+}
+.header-info button{
+    font-size: 14px;
+    border-radius:20px ;
+    border: 2px solid #F13C6E;
+    background-color: transparent;
+    padding: 10px 15px;
+    margin-left: 20px;
+
 }
